--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                 <div class="detail1_right2">
                                     <img src="./web_assets/img/page3/QR.png" alt="myself_img">
                                     <br>
-                                    リンクはこちら➢
+                                    <a href="https://takumiaaa.github.io/Cara-Doctor.github.io/index.html" class="btn btn-primary">リンクはこちら➢</a>
                                 </div>
                                 <div class="key1">
                                     キーワード
