--- a/index.html
+++ b/index.html
@@ -802,6 +802,11 @@
                                 <div class="detail2_top">
                                     他学科のロボコンチームに所属し，ロボカップジャパンオープン＠ホームリーグに参加しており，専門外の知識も広く学んでいます．担当は音声認識の部分です．ロボットが指示を聞き取り，タスクを行うというルール上，音声認識は重要な部分になります．深層学習を用いた認識を使用することで，音声認識精度を大幅に向上させること，開発側があらかじめ用意していない未知の内容の文章の認識が可能になりました．現在は，聞こえた文章をよりロボットが理解しやすい文章に書き換えることや，”here”などの不確定な単語に対して，聞き返すことや，文脈から予測できるような仕組みの精度向上に取り組んでいます． 
                                 </div>
+                                <div class="key2">
+                                    <a href="https://www.oit.ac.jp/japanese/prize/show.php?id=367" class="btn btn-primary">記事(2022年度)</a><br>
+                            <a href="https://www.oit.ac.jp/japanese/topics/index.php?i=9284" class="btn btn-primary">記事(2023年度)</a>
+                                </div>
+                                
                                 <!-- <div class="key2_under">
                                     <div class="key2_left">
                                         <div class="key2_1">
