--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                         
                         <div class="detail2">
                                 <div class="detail2_top">
-                                    フィリピン(セブ島)に４週間留学経験があります．現地の人との交流を意識したことで，語学力の向上に加え，異なる文化に触れ，受け入れることで柔軟な考え方の基盤を身に着けました．また，リゾート地には足を運べませんでしたが、滞在地付近のスラム街や一般家庭などの様子からインフラストラクチャーの整備や技術の普及にはまだ格差があることを実感しました.さらに，現地の体育館に日本人3人で遊びに行き、そこでバドミントンをしていたら、偶然にもそこにいた現地の人と仲良くなりました。たくさんの方と試合ができて、友達にもなれ楽しい時間でした！
+                                    フィリピン(セブ島)に４週間留学経験があります．現地の人との交流を意識したことで，語学力の向上に加え，異なる文化に触れ，受け入れることで柔軟な考え方の基盤を身に着けました．また，リゾート地には足を運べませんでしたが、滞在地付近のスラム街や一般家庭などの様子からインフラストラクチャーの整備や技術の普及にはまだ格差があることを実感しました.さらに，現地の体育館に日本人3人で遊びに行き、そこでバドミントンをしていたら、偶然にもそこにいた現地の人と仲良くなりました。たくさんの方と試合ができて、友達にもなれ楽しい時間でした！また，プログラミングも学び「PHP」「Laravel」「Unity」「Django」「HTML＆CSS」「Javascript」を1から学び，扱えるようになりました．
                                 </div>
                                 <!-- <div class="key2">
                                     キーワード
