--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </div>
                             <div class="detail1_under">
                                 <div class="mov">
-                                    <video src="./web_assets/img/page3/cre-n_video.mp4" controls preload="none"></video>
+                                    <video src="./web_assets/img/page3/cre-n_video.mp4" controls preload="none" poster="web_assets/img/s1.png"></video>
                                 </div>
                                 <div class="key1_1">
                                     <!-- <div class="key6">
@@ -192,7 +192,7 @@
                     <div class="detail2_all">
                         <div class="title_name2">
                             リアルタイム音声認識
-                            <video src="./web_assets/img/page3/whisper.mp4" controls preload="none"></video>
+                            <video src="./web_assets/img/page3/whisper.mp4" controls preload="none" poster="web_assets/img/s2.png" ></video>
                         </div>
 
                         
@@ -241,7 +241,7 @@
                                         プレゼン動画
                                     </div>
                                     <div class="detail3_left1_2">
-                                        <video src="./web_assets/img/page3/presentation.mp4" controls preload="none"></video>
+                                        <video src="./web_assets/img/page3/presentation.mp4" controls preload="none" poster="web_assets/img/s3.png"></video>
                                     </div>
                                 </div>
                                 <div class="detail2_left2">
@@ -249,7 +249,7 @@
                                         使い方動画
                                     </div>
                                     <div class="detail3_left2_2">
-                                        <video src="./web_assets/img/page3/color_doc.mp4" controls preload="none"></video>
+                                        <video src="./web_assets/img/page3/color_doc.mp4" controls preload="none" poster="web_assets/img/s4.png"></video>
                                     </div>
                                 </div>
                             </div>
@@ -716,16 +716,16 @@
                             <!-- サークル -->
                             <div class="slideshow-container">
                                 <div class="mySlides2 fade">
-                                    <img src="web_assets/img/page5/club/1.jpg" alt="画像1">
+                                    <img src="web_assets/img/page5/club/2.jpg" alt="画像1">
                                 </div>
                                 <div class="mySlides2 fade">
-                                    <img src="web_assets/img/page5/club/2.jpg" alt="画像2">
+                                    <img src="web_assets/img/page5/club/3.jpg" alt="画像2">
                                 </div>
                                 <div class="mySlides2 fade">
-                                    <img src="web_assets/img/page5/club/3.jpg" alt="画像3">
+                                    <img src="web_assets/img/page5/club/4.jpg" alt="画像3">
                                 </div>
                                 <div class="mySlides2 fade">
-                                    <img src="web_assets/img/page5/club/4.jpg" alt="画像4">
+                                    <img src="web_assets/img/page5/club/1.jpg" alt="画像4">
                                 </div>
                                 <div class="mySlides2 fade">
                                     <img src="web_assets/img/page5/club/5.jpg" alt="画像5">
@@ -854,7 +854,7 @@
                     <img src="./web_assets/img/page5/5page_1.png" alt="myself_img">
                     <div class="product1-text">
                         <p><div class="product_name">留学</div></p>
-                        <p><div class="product_time">制作期間:4週間(2022)</div></p>
+                        <p><div class="product_time">滞在期間:4週間(2024)</div></p>
                         <p><div class="product_people">フィリピンのセブ島にて</div></p>
                         <p><div class="product_people">留学経験あり</div></p>
                     </div>
